@@ -1,7 +1,5 @@
 package no.nav.bidrag.beregn.forskudd.rest.service;
 
-import static java.util.stream.Collectors.toList;
-
 import com.fasterxml.jackson.databind.ObjectMapper;
 import java.time.LocalDate;
 import java.util.ArrayList;
@@ -13,7 +11,6 @@ import no.nav.bidrag.beregn.felles.dto.AvvikCore;
 import no.nav.bidrag.beregn.forskudd.core.ForskuddCore;
 import no.nav.bidrag.beregn.forskudd.core.dto.BeregnetForskuddResultatCore;
 import no.nav.bidrag.beregn.forskudd.core.dto.ResultatPeriodeCore;
-import no.nav.bidrag.beregn.forskudd.rest.consumer.BidragGcpProxyConsumer;
 import no.nav.bidrag.beregn.forskudd.rest.dto.http.BeregnForskuddGrunnlag;
 import no.nav.bidrag.beregn.forskudd.rest.dto.http.BeregnetForskuddResultat;
 import no.nav.bidrag.beregn.forskudd.rest.dto.http.ResultatGrunnlag;
@@ -44,14 +41,25 @@ public class BeregnForskuddService {
 
     // Henter sjabloner
     var sjablonSjablontallResponse = sjablonService.hentSjablonSjablontall();
-    LOGGER.debug("Antall sjabloner hentet av type Sjablontall: {}", sjablonSjablontallResponse.getResponseEntity().getBody().size());
+    if (LOGGER.isDebugEnabled() && sjablonSjablontallResponse.getResponseEntity().getBody() != null) {
+      LOGGER.debug("Antall sjabloner hentet av type Sjablontall: {}", sjablonSjablontallResponse.getResponseEntity().getBody().size());
+    }
 
     // Lager input-grunnlag til core-modulen
     var grunnlagTilCore = CoreMapper.mapGrunnlagTilCore(grunnlag, sjablonSjablontallResponse.getResponseEntity().getBody());
 
+    BeregnetForskuddResultatCore resultatFraCore;
+
     // Kaller core-modulen for beregning av forskudd
-    LOGGER.debug("Forskudd - grunnlag for beregning: {}", grunnlagTilCore);
-    var resultatFraCore = forskuddCore.beregnForskudd(grunnlagTilCore);
+    if (LOGGER.isDebugEnabled()) {
+      LOGGER.debug("Forskudd - grunnlag for beregning: {}", grunnlagTilCore);
+    }
+
+    try {
+      resultatFraCore = forskuddCore.beregnForskudd(grunnlagTilCore);
+    } catch (Exception e) {
+      throw new UgyldigInputException("Ugyldig input ved beregning av forskudd: " + e.getMessage());
+    }
 
     if (!resultatFraCore.getAvvikListe().isEmpty()) {
       LOGGER.error("Ugyldig input ved beregning av forskudd. Følgende avvik ble funnet: " + System.lineSeparator()
@@ -67,9 +75,12 @@ public class BeregnForskuddService {
           + resultatFraCore.getAvvikListe().stream().map(AvvikCore::getAvvikTekst).collect(Collectors.joining("; ")));
     }
 
-    LOGGER.debug("Forskudd - resultat av beregning: {}", resultatFraCore.getBeregnetForskuddPeriodeListe());
+    if (LOGGER.isDebugEnabled()) {
+      LOGGER.debug("Forskudd - resultat av beregning: {}", resultatFraCore.getBeregnetForskuddPeriodeListe());
+    }
+
     var grunnlagReferanseListe = lagGrunnlagReferanseListe(grunnlag, resultatFraCore);
-    return HttpResponse.from(HttpStatus.OK, new BeregnetForskuddResultat(resultatFraCore, grunnlagReferanseListe));
+    return HttpResponse.Companion.from(HttpStatus.OK, new BeregnetForskuddResultat(resultatFraCore, grunnlagReferanseListe));
   }
 
   // Lager en liste over resultatgrunnlag som inneholder:
@@ -83,13 +94,13 @@ public class BeregnForskuddService {
         .map(ResultatPeriodeCore::getGrunnlagReferanseListe)
         .flatMap(Collection::stream)
         .distinct()
-        .collect(toList());
+        .toList();
 
     // Matcher mottatte grunnlag med grunnlag som er brukt i beregningen
     resultatGrunnlagListe.addAll(forskuddGrunnlag.getGrunnlagListe().stream()
         .filter(grunnlag -> grunnlagReferanseListe.contains(grunnlag.getReferanse()))
         .map(grunnlag -> new ResultatGrunnlag(grunnlag.getReferanse(), grunnlag.getType(), grunnlag.getInnhold()))
-        .collect(toList()));
+        .toList());
 
     // Danner grunnlag basert på liste over sjabloner som er brukt i beregningen
     resultatGrunnlagListe.addAll(resultatFraCore.getSjablonListe().stream()
@@ -99,10 +110,10 @@ public class BeregnForskuddService {
               map.put("datoTil", mapDato(sjablon.getPeriode().getDatoTil()));
               map.put("sjablonNavn", sjablon.getNavn());
               map.put("sjablonVerdi", sjablon.getVerdi().intValue());
-              return new ResultatGrunnlag(sjablon.getReferanse(), "Sjablon", mapper.valueToTree(map));
+              return new ResultatGrunnlag(sjablon.getReferanse(), "SJABLON", mapper.valueToTree(map));
             }
         )
-        .collect(toList()));
+        .toList());
 
     return resultatGrunnlagListe;
   }
